--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
